--- a/gui/index.html
+++ b/gui/index.html
@@ -344,7 +344,7 @@
 
         //--------------------------------------------------------------------------------------------------------------
         // API Calls
-        const server = "hall.linuxconsulting.ro";
+        const server = "127.0.0.1";
         const port = 9090;
         let req = new XMLHttpRequest();
         console.log("Getting temp for all stations");
