--- a/gui/index-openlayers.html
+++ b/gui/index-openlayers.html
@@ -4,7 +4,8 @@
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/css/ol.css" type="text/css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/css/ol.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/build/ol.js"></script>
     <script src="https://kit.fontawesome.com/9e54fd4c31.js" crossorigin="anonymous"></script>
     <title>Weather Stations</title>
@@ -13,7 +14,8 @@
 <body>
     <h2>Weather Stations</h2>
     <div id="map" style="height: 1000px; width: 100%;"></div>
-    <div id="popup" style="background-color: white; border: 1px solid black; width:300px; min-height:80px">POPUP with information</div>
+    <div id="popup" style="background-color: white; border: 1px solid black; width:300px; min-height:80px">POPUP with
+        information</div>
     <script type="text/javascript">
         var req = new XMLHttpRequest();
         console.log("Getting all stations");
@@ -22,9 +24,9 @@
         req.open("GET", "/api/v0/stations");
         req.send();
 
-        function updateProgress(e) {}
+        function updateProgress(e) { }
 
-        req.onreadystatechange = function() {
+        req.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
                 const data = JSON.parse(this.responseText);
                 const features = [];
@@ -72,7 +74,7 @@
                 var styleCache = {};
                 var vectorLayer = new ol.layer.Vector({
                     source: clusterSource,
-                    style: function(feature, resolution) {
+                    style: function (feature, resolution) {
                         var innerFeat = feature.get('features')
                         var size = innerFeat.length;
                         var style = styleCache[size];
@@ -110,10 +112,10 @@
                 });
                 map.addOverlay(popup);
 
-                map.on('singleclick', function(evt) {
+                map.on('singleclick', function (evt) {
                     var element = popup.getElement();
                     element.style.display = "none";
-                    map.forEachFeatureAtPixel(evt.pixel, function(feature, layer) {
+                    map.forEachFeatureAtPixel(evt.pixel, function (feature, layer) {
                         if (feature) {
 
                             var coord = feature.getGeometry().getCoordinates();
@@ -124,7 +126,7 @@
                             req.open("GET", `/api/v0/station/${name}`);
                             req.send();
 
-                            req.onreadystatechange = function() {
+                            req.onreadystatechange = function () {
                                 if (this.readyState == 4 && this.status == 200) {
                                     try {
                                         const data = JSON.parse(this.responseText);
